tests/NormalTests/paczka2/big_fuzzy/95236344.err
Error in line 6: QmLQrW S160 299,8
Error in line 7: QmLQrW A898 616,5
Error in line 10: QmLQrW A540 5,8
Error in line 30: MSz1WvZ4XDf A540 50,2
Error in line 21: A8hCmw A898 93,7
Error in line 34: A8hCmw S160 64,4
Error in line 33: MSz1WvZ4XDf A898 85,5
Error in line 38: A898 S160 80,9
Error in line 40: QmLQrW A540 -1,9
Error in line 39: A898 A345 56,0
Error in line 36: QmLQrW A540 1,5
Error in line 62: QmLQrW A898 87,6
Error in line 63: MSz1WvZ4XDf S160 34,7
Error in line 68: QmLQrW A345 1,2
Error in line 76: CE8Dr6 A898 73,4
Error in line 79: A898 S160 41,2
Error in line 84: npTqH A898 5,4
Error in line 88: A898 A540 13,3
Error in line 107: A898 A898 98,5
Error in line 132: A898 A540 19,4
Error in line 136: MSz1WvZ4XDf A540 45,8
Error in line 149: QmLQrW S160 54,5
Error in line 159: npTqH A345 964,5
Error in line 162: MSz1WvZ4XDf A540 65,1
Error in line 163: A8hCmw S160 13,6
Error in line 161: npTqH S160 28,1
Error in line 166: MSz1WvZ4XDf A898 2,9
Error in line 167: A8hCmw A898 34,8
Error in line 169: MSz1WvZ4XDf A540 38,6
Error in line 164: QmLQrW A345 98,5
Error in line 176: MSz1WvZ4XDf A540 59,8
Error in line 188: A898 A345 9,1
Error in line 196: MSz1WvZ4XDf S160 12,0
Error in line 205: MSz1WvZ4XDf A898 69,2
Error in line 207: MSz1WvZ4XDf A540 37,9
Error in line 216: A8hCmw A898 65,3
Error in line 214: dynNER A540 43,5
Error in line 220: dynNER A898 88,4
Error in line 233: A898 A540 31,0
Error in line 236: npTqH S160 71,4
Error in line 237: MSz1WvZ4XDf A540 28,3
Error in line 248: dynNER S160 78,4
